--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -332,3 +332,12 @@
     position: absolute;
     bottom: -11px !important;
 }
+
+.activeDrop{
+    padding-left: 0px;
+}
+.highlight{
+
+  font-weight:bold;
+}
+
