--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -269,27 +269,30 @@
     <div class="modal-body">
       <div class="search_block">
         <div class="label-text mb-1">Field Name</div>
-        <div class="row m-0 align-items-center">
-          <div class="kr-sg-dropdowns">
-            <!-- [ngClass]="{'disabled': addEditFacetObj._id}" -->
-            <div class="kr-sg-input-search dropdown dropdown-open line-height-0">
-              <button id="btn_select_facet_field" class="dropdown-toggle dropdown-input search-with-dropdown"
-                data-toggle="dropdown"></button>
-              <input type="text" maxlength="60" placeholder="Enter Field Name" id="facets-search-input"
-                class="input-search dropdown-toggle dropdown-input" data-toggle="dropdown"
-                [(ngModel)]="resultListObj.groupSetting.fieldName" autocomplete="off">
-              <ul class="dropdown-menu content-menu" id="facets-search-with-dropdown-menu">
-                <perfect-scrollbar class="scroll-search-field">
-                  <li *ngFor="let field of allFieldData | filter : [resultListObj.groupSetting.fieldName, 'fieldName'] "
-                    (click)="getFieldValues(field);resultListObj.groupSetting.fieldName=field.fieldName">
-                    <a>{{field.fieldName}}</a>
-                  </li>
-                </perfect-scrollbar>
-              </ul>
+        <div class="col-14 row mb-3 pr-3 align-items-center right-side-sec pr-1">
+          <div class="kr-sg-dropdowns col-12 pr-0" ngbDropdown ngbDropdown (click)="clearcontent()">
+		        <div class="dropdown dropdown-open">
+                  <button class="dropdown-toggle dropdown-input" id="dropdownBasic1" ngbDropdownToggle>
+								       {{resultListObj.groupSetting.fieldName? resultListObj.groupSetting.fieldName : "Choose field"}}							
+                                                                        
+                  </button>
+                  <ul class="dropdown-menu content-menu faq-filter-add col-12" ngbDropdownMenu style="overflow-y: hidden;">
+                        <li class="search-box">
+                            <input id="searchBoxId" [(ngModel)]="field_name" autocomplete="off" type="text" (keydown)="$event.stopPropagation()" placeholder="Search" class="seach-input" />
+                        </li>
+                         <perfect-scrollbar class="scroll-search-field h-178" style="max-height: 189px !important;">
+                              <ng-container *ngIf="allFieldData && allFieldData.length">
+                                    <li ngbDropdownItem *ngFor="let field of allFieldData | filter : [field_name, 'fieldName']" (click)="getFieldValues(field);resultListObj.groupSetting.fieldId=field._id;resultListObj.groupSetting.fieldName=field.fieldName" [ngClass]="{'highlight':resultListObj.groupSetting.fieldName===field.fieldName}">                            
+                                                    {{ field.fieldName }}</li>   
+                              </ng-container>
+                                               
+                          </perfect-scrollbar>
+                      </ul>
+               </div>
             </div>
-          </div>
         </div>
       </div>
+      
       <ng-container *ngIf="resultListObj?.groupSetting?.fieldId?.length">
         <div class="valuse-available-fileds">
           <div class="col-12 heading">Values Available</div>
