--- a/findly-builder/src/app/components/actions/actions.component.html
+++ b/findly-builder/src/app/components/actions/actions.component.html
@@ -82,7 +82,7 @@
             </div>
             <div class="kr-sg-dropdowns preview-template" ngbDropdown [placement]="'right-center'">                
                 <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown" ngbDropdownToggle tooltipClass="tooltip-global-" [container]="'body'" ngbTooltip='Preview template' placement="top-center">
+                    <button class="dropdown-toggle dropdown-input" ngbDropdownToggle tooltipClass="tooltip-global-" [container]="'body'" ngbTooltip='Preview template' placement="top-center">
                         <img src="{{botLinked?'assets/icons/generalsettings/password.svg' : 'assets/icons/generalsettings/gray_password.svg'}}">
                     </button>                                            
                     <ul class="dropdown-menu content-menu" ngbDropdownMenu>                                               
