--- a/findly-builder/src/app/components/bot-action/bot-action.component.scss
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.scss
@@ -511,6 +511,12 @@
                         left: 10px;
                         top: 9px;
                     }
+                    .close-icon {
+                        position: absolute;
+                        right: 11px;
+                        top: 12px;
+                        cursor: pointer;
+                    }
                 }
                 .link-bot-table{
                     margin: 0 -1px;
