--- a/findly-builder/src/app/components/result-templates/result-templates.component.scss
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.scss
@@ -2571,3 +2571,15 @@ padding: 10px 20px 10px 20px;
         }
     }
 }
+.activeDrop{
+    padding-left: 0px;
+}
+.highlight{
+
+  font-weight:bold;
+}
+
+.faq-filter-add{
+  max-width: 97.8%;
+  margin-left: 17px;
+}
