--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -292,7 +292,7 @@
                                       </div>
                                   </div>
                                   <div class="kr-sg-input-text" *ngIf="ruleObj.contextType ==='userContext'">                               
-                                    <input type="text" id="userType" [(ngModel)]="ruleObj.contextCategory" class="input-text">
+                                    <input type="text" id="userType" [(ngModel)]="ruleObj.contextCategory" class="input-text pr-0 pl-0">
                                 </div>
                                 
                               </div>
